# stocks-project

./: .gitignore  README.md  pyproject.toml  small.txt  test_aapl.txt  test_ge.txt  test_large.txt  test_small.txt
src/: Stocks.ipynb  files.py  main.py  portfolio.py  trade.py
