[tool.poetry]
name = "stocks-project"
version = "0.1.0"
description = ""
authors = ["marvlach <marios.vlachog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.13.1"
pandas = "^2.1.4"
ipykernel = "^6.28.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
